--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ theme:
         - navigation.top
         #- navigation.tabs
         #- navigation.tabs.sticky
-        #- navigation.expand
+        - navigation.expand
         - navigation.footer
         - search.suggest
         - search.highlight
