--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,8 +103,8 @@ plugins:
       custom-attributes: 'assets/css/custom_attributes.css'
   - custom-attributes:
       file: 'assets/css/custom_attributes.css'
-  - tags:
-      tags_file: tags.md
+  #- tags:
+      #tags_file: tags.md
   - encryptcontent:
       title_prefix: '🔐'
       summary: 'Private page'
