--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,5 +151,5 @@ nav:
     - Introduction to Primer: Introduction to Primer.md
     - Primer:
       - 1. How Have Human Tissues and Cells Been Used for Biomedical Research?:
-          - Primer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
-      - 2. What Is A Cell? What is Cell Research?:
+          - 1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
+      - 2. What Is A Cell? What is Cell Research?: 2. What Is A Cell? What is Cell Research?
