--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,11 +146,11 @@ extra:
     fix_heading: true
 
 # Page Tree
-nav:
-    - Frontmatter: index.md
-    - Introduction to Primer: Introduction to Primer/Introduction to Primer.md
-    - Primer:
-      - 1. How Have Human Tissues and Cells Been Used for Biomedical Research?:
-          - Primer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
-      - 2. What Is A Cell? What is Cell Research?:
-          - Primer/2. What Is A Cell? What is Cell Research?/2. What Is A Cell? What is Cell Research?.md
+#nav:
+#    - Frontmatter: index.md
+#    - Introduction to Primer: Introduction to Primer/Introduction to Primer.md
+#    - Primer:
+#      - 1. How Have Human Tissues and Cells Been Used for Biomedical Research?:
+#          - Primer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
+#      - 2. What Is A Cell? What is Cell Research?:
+#          - Primer/2. What Is A Cell? What is Cell Research?/2. What Is A Cell? What is Cell Research?.md
