--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,8 +88,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
 plugins:
   - search
-  - mkdocs-nav-weight:
-      section_renamed: true
+  - awesome-pages
   - meta-descriptions
   - git-revision-date-localized:
       type: date
