--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ plugins:
   #- tags:
       #tags_file: tags.md
   - encryptcontent:
+      global_password: ${{ secrets.GLOBAL_PW }}
       title_prefix: '🔐'
       summary: 'This content is protected'
       placeholder: 'Provide password here and press ENTER'
