--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Stem Cells Across The Curriculum
  # Change this to your site name
-site_description: A cool description of your site
+site_description: A cool description of your site # Description
 site_url: https://stemcellcurriculum.github.io/backgrounder/ # Change this to your site URL
 
 theme:
