Open links in new tab

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,6 +122,7 @@ hooks:
   - overrides/hooks/on_page_markdown.py
   - overrides/hooks/on_env.py
 extra_javascript:
+  - docs/assets/js/open_links_in_new_tab.js
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
